Place modal on top of fixed footer and h-menu z-index: 4;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,6 +464,7 @@ i[tool-tip]:hover::after {
   text-align: justify;
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  z-index: 4; /* Place on top of fixed footer and hamburger-menu */
 
   /* Add animation */
   -webkit-animation-name: example; /* Chrome, Safari, Opera */
